utilities/scale-json/src/snapshots/scale_json__test__snapshots-2.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "System": {
    "ExtrinsicFailed": {
      "dispatch_error": "error"
    }
  }
}
