utilities/scale-json/src/snapshots/scale_json__test__snapshots-4.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "Other": {
    "ValueVariant": 42
  }
}
