utilities/scale-json/src/snapshots/scale_json__test__snapshots-5.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "Other": {
    "TupleVariant": [
      42,
      "hello",
      true
    ]
  }
}
