utilities/scale-json/src/snapshots/scale_json__test__snapshots-6.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "Other": {
    "StructVariant": {
      "field": 42
    }
  }
}
