utilities/scale-json/src/snapshots/scale_json__test__snapshots-7.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "Other": {
    "ArrayVariant": [
      1,
      2,
      3
    ]
  }
}
