utilities/scale-json/src/snapshots/scale_json__test__snapshots-9.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "Other": {
    "BitcoinVariant": {
      "inner": "Btc"
    }
  }
}
