utilities/scale-json/src/snapshots/scale_json__test__snapshots.snap
---
source: utilities/scale-json/src/test.rs
expression: decoded_json
---
{
  "System": {
    "ExtrinsicSuccess": {
      "dispatch_info": "info"
    }
  }
}
